frontend/kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3001
  selector:
    app: frontend
  type: LoadBalancer
